# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py
snacks_project/: settings.py
snacks_project/snacks_project/: settings.py
templates/: about.html  base.html  home.html
