[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["Yahia Qous <yahiaqous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
